--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  	<div class="column">
  		<h4>My Links</h4>
  		<p>
-			<a href="https://www.facebook.com/roman.burkle.77?ref=bookmarks" > Facebook
+			<a href="https://www.facebook.com/" > Facebook
 			</a> 		
 		</p>
  	</div> 
