Aenderung an index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  	<div class="column">
  		<h4>My Links</h4>
  		<p>
-			<a href="https://www.facebook.com/" > Facebook
+			<a href="https://www.google.de/" > Platzhalter
 			</a> 		
 		</p>
  	</div> 
