--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
  	<div class="column">
  		<h4>My Links</h4>
  		<p>
-			<a href="https://www.facebook.com/roman.burkle.77?ref=bookmarks" > Facebook
+			<a href="www.google.de" > Platzhalter
 			</a> 		
 		</p>
  	</div> 
