--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
-<!--created by rb--> 
-<!-- date 02.03.2018--> 
+<!--created by r2d2--> 
+<!-- @date 02.03.2018--> 
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
@@ -28,7 +28,6 @@
  		<h1 class="about-title">Becoming a web developer</h1> 	
  		<div class="about-content">
  			<p>If somebody would have told me a week ago that I would be able to make a website. I would not believed them.</p>
-			<p>Just a few days later, I came across Mimo and started to work on a real blog.</p> 
 		</div>
  	</div>
  </div>
@@ -45,8 +44,6 @@
  	</div> 
  </div>
 </div>
-
-
 
 </body>
 </html>
