--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 <head>
 <title>My blog</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
+<meta name="viewport" = content="width=device-width">
 </head>
 <body>
 
