--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
 <title>My blog</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
+<meta name="viewport" = content="width=device-width">
 </head>
 <body>
 
