--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
  		<div class="about-author">
 			<img class="img-circle" src="ESA_Rosetta_NAVCAM_20160327_LR.jpg" > 
 			</div>	
- 		<h1 class="about-title">Becoming a web developer</h1> 	
+ 		<h1 class="about-title">CV</h1> 	
  		<div class="about-content">
- 			<p>If somebody would have told me a week ago that I would be able to make a website. I would not believed them.</p>
+ 			<p>...</p>
 		</div>
  	</div>
  </div>
@@ -39,7 +39,7 @@
  	<div class="column">
  		<h4>My Links</h4>
  		<p>
-			<a href="www.google.de" > Platzhalter
+			<a href="www.google.de" > Link to google.de
 			</a> 		
 		</p>
  	</div> 
