--- a/index.html
+++ b/index.html
@@ -39,20 +39,14 @@
 		<div class="row">
   			<div class="leftcolumn">
     			<div class="card">
-      				<h5>Title description, Dec 7, 2017</h5>
-      					<p><a href="https://www.w3schools.com/"> site learning</a></p>
+      				<h5>DDA project initialization 23.02.2019</h5>
+      					It is important to know how explicit euler procedure works. It is used to solve 
+      					first-order differential equation. In the next step i will be present a 
+      					general approach using DDAs.      					
     			</div>
     		</div>
 	   </div> 		
  		
- 		<div class="row">
-  			<div class="leftcolumn">
-    			<div class="card">
-      				<h5>Title description, Dec 7, 2017</h5>
-      					<p><a href="https://www.w3schools.com/"> site learning</a></p>
-    			</div>
-    		</div>
-	   </div> 
  		
  						
 		 		
