--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-<title>My blog</title>
+<title>Info</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 </head>
@@ -11,9 +11,8 @@
 
 <div id="header">
  <div class="container">
- 	<a id="header-title" href="index.html" > My Blog</a>
+ 	<a id="header-title" href="index.html" >Info</a>
  	<ul id="header-nav">
-		<li> <a href="about.html" > About  </a> </li> 	
 		<li> <a href="mailto:r.buerkle@gmx.de">Contact</a></li> 	
  	</ul>
  </div>
@@ -26,23 +25,19 @@
  		<div class="about-author">
 			<img class="img-circle" src="pic/ESA_Rosetta_NAVCAM_20160327_LR.jpg" > 
 			</div>	
- 		<h1 class="about-title">CV</h1> 	
- 		
+ 			
  	</div>
  </div>
 </div>
 
-<div id="footer"> 
- <div class="container">
- 	<div class="column">
- 		<h4>My Links</h4>
- 		<p>
-			<a href="www.google.de" > Link to google.de
-			</a> 		
-		</p>
- 	</div> 
- </div>
+
+<div class="footer">
+  <p>..</p>
 </div>
+
+
+
+
 
 </body>
 </html>
