--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
  </div>
 
 <div class="footer">
-  <p>..</p>
+	<p>
+		<button onclick="myMove()">Click Me</button> 
+   </p> 
 </div>
-
 </body>
 </html>
